--- a/.github/workflows/test-android.yml
+++ b/.github/workflows/test-android.yml
@@ -9,7 +9,7 @@ permissions: read-all
 jobs:
   apk:
     name: Create apk (free)
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
