--- a/.github/workflows/test-ios.yml
+++ b/.github/workflows/test-ios.yml
@@ -9,7 +9,7 @@ permissions: read-all
 jobs:
   ios:
     name: Create ios (free)
-    runs-on: macos-latest
+    runs-on: macos-14
     steps:
       - uses: actions/checkout@v4
 
