--- a/.github/workflows/test-macos-pkg.yml
+++ b/.github/workflows/test-macos-pkg.yml
@@ -9,7 +9,7 @@ permissions: read-all
 jobs:
   pkg:
     name: Create pkg (free)
-    runs-on: macos-latest
+    runs-on: macos-14
     steps:
       - uses: actions/checkout@v4
 
