--- a/.github/workflows/test-macos-tar.yml
+++ b/.github/workflows/test-macos-tar.yml
@@ -9,7 +9,7 @@ permissions: read-all
 jobs:
   macos_tar:
     name: Create macos tar (free)
-    runs-on: macos-latest
+    runs-on: macos-14
     steps:
       - uses: actions/checkout@v4
 
