--- a/.github/workflows/test-macos-zip.yml
+++ b/.github/workflows/test-macos-zip.yml
@@ -9,7 +9,7 @@ permissions: read-all
 jobs:
   macos_zip:
     name: Create macos zip (free)
-    runs-on: macos-latest
+    runs-on: macos-14
     steps:
       - uses: actions/checkout@v4
 
