--- a/.github/workflows/test-tools.yml
+++ b/.github/workflows/test-tools.yml
@@ -9,7 +9,7 @@ permissions: read-all
 jobs:
   windows-signtool:
     name: Create signtool
-    runs-on: windows-latest
+    runs-on: windows-2022
     steps:
       - name: Check SignTool
         run: |
@@ -18,7 +18,7 @@ jobs:
 
   windows-msvc:
     name: Create msvc
-    runs-on: windows-latest
+    runs-on: windows-2022
     steps:
       - name: Check msvc
         run: |
@@ -34,7 +34,7 @@ jobs:
 
 #  windows-msix:
 #    name: Create msix
-#    runs-on: windows-latest
+#    runs-on: windows-2022
 #    steps:
 #      - uses: actions/checkout@v4
 #
@@ -62,7 +62,7 @@ jobs:
 
   windows-yq:
     name: Update config
-    runs-on: windows-latest
+    runs-on: windows-2022
     steps:
       - uses: actions/checkout@v4
 
@@ -102,7 +102,7 @@ jobs:
 
   linux-envs:
     name: Get envs
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
       - name: Configure .env
         run: |
