--- a/.github/workflows/test-windows-exe.yml
+++ b/.github/workflows/test-windows-exe.yml
@@ -9,7 +9,7 @@ permissions: read-all
 jobs:
   exe:
     name: Create exe
-    runs-on: windows-latest
+    runs-on: windows-2022
     steps:
       - uses: actions/checkout@v4
 
