--- a/.github/workflows/test-windows-msix-free.yml
+++ b/.github/workflows/test-windows-msix-free.yml
@@ -9,7 +9,7 @@ permissions: read-all
 jobs:
   get_version:
     name: Create release
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     outputs:
       version: ${{ steps.version_step.outputs.version }}
     steps:
@@ -27,7 +27,7 @@ jobs:
 
   msix_free:
     name: Create msix (free)
-    runs-on: windows-latest
+    runs-on: windows-2022
     needs:
       - get_version
     steps:
