--- a/.github/workflows/test-windows-zip.yml
+++ b/.github/workflows/test-windows-zip.yml
@@ -9,7 +9,7 @@ permissions: read-all
 jobs:
   zip:
     name: Create zip
-    runs-on: windows-latest
+    runs-on: windows-2022
     steps:
       - uses: actions/checkout@v4
 
