--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -311,8 +311,9 @@ jobs:
 
       - name: Install dependencies for Linux
         run: |
+          # https://github.com/getsentry/sentry-dart/issues/2504
           sudo apt-get update -y && sudo apt-get upgrade -y
-          sudo apt-get install -y curl git unzip xz-utils zip libglu1-mesa
+          sudo apt-get install -y curl libcurl4-openssl-dev git unzip xz-utils zip libglu1-mesa
           sudo apt-get install -y clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev libstdc++-12-dev
           sudo apt-get install -y p7zip-full p7zip-rar
 
