--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -4,24 +4,6 @@ plugins {
     id "dev.flutter.flutter-gradle-plugin"
 }
 
-def localProperties = new Properties()
-def localPropertiesFile = rootProject.file('local.properties')
-if (localPropertiesFile.exists()) {
-    localPropertiesFile.withReader('UTF-8') { reader ->
-        localProperties.load(reader)
-    }
-}
-
-def flutterVersionCode = localProperties.getProperty('flutter.versionCode')
-if (flutterVersionCode == null) {
-    flutterVersionCode = '1'
-}
-
-def flutterVersionName = localProperties.getProperty('flutter.versionName')
-if (flutterVersionName == null) {
-    flutterVersionName = '1.0.0'
-}
-
 def keystoreProperties = new Properties()
 def keystorePropertiesFile = rootProject.file('key.properties')
 if (keystorePropertiesFile.exists()) {
@@ -36,8 +18,8 @@ if (proKeystorePropertiesFile.exists()) {
 
 android {
     namespace "com.kjxbyz.picguard"
-    compileSdkVersion 34
-//    ndkVersion flutter.ndkVersion
+    compileSdk = flutter.compileSdkVersion
+//    ndkVersion = flutter.ndkVersion
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_17
@@ -55,21 +37,11 @@ android {
     defaultConfig {
         applicationId "com.kjxbyz.picguard"
         // You can update the following values to match your application needs.
-        // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
+        // For more information, see: https://flutter.dev/to/review-gradle-config.
         minSdkVersion 24
-        targetSdkVersion 34
-        versionName flutterVersionName
-        versionCode flutterVersionCode.toInteger()
-    }
-
-    // https://developer.android.com/build/configure-apk-splits
-    splits {
-        abi {
-            enable false
-            reset()
-            universalApk true  // If true, also generate a universal APK
-            include "armeabi-v7a", "arm64-v8a", "x86_64"
-        }
+        targetSdk = flutter.targetSdkVersion
+        versionCode = flutter.versionCode
+        versionName = flutter.versionName
     }
 
     signingConfigs {
@@ -160,20 +132,3 @@ flutter {
 }
 
 dependencies {}
-
-// To comply with F-Droid version code schema
-ext.abiCodes = ["x86_64": 1, "armeabi-v7a": 2, "arm64-v8a": 3]
-import com.android.build.OutputFile
-android.applicationVariants.all { variant ->
-  variant.outputs.each { output ->
-        def flavorName = variant.flavorName
-        def flavor = flavorName.replaceAll("(Staging|Production)", "")
-        def suffix = flavorName.contains("Staging") ? ".pre" : ""
-        def abi = output.getFilter(OutputFile.ABI)
-        def abiVersionCode = project.ext.abiCodes.get(abi)
-        def arch = abi == null ? "universal" : abi
-        def versionCode = abiVersionCode == null ? variant.versionCode : variant.versionCode * 10 + abiVersionCode
-        output.outputFileName = "PicGuard_${variant.versionName}+${versionCode}${suffix}-${flavor}_${arch}.apk"
-        output.versionCodeOverride = versionCode
-    }
-}
