--- a/linux/packaging/rpm/make_config.yaml
+++ b/linux/packaging/rpm/make_config.yaml
@@ -1,7 +1,14 @@
 display_name: PicGuard
 icon: logo/logo-512.png
 summary: Your pictures, your signature.
-group: Application/Emulator
+description: |
+  Introducing **PicGuard** - the ultimate solution for securing and customizing your digital photos. With our app, you can easily add watermarks to your images to protect your creative work and maintain your privacy.
+
+  **PicGuard** offers robust privacy protection features, ensuring your personal and sensitive information remains safeguarded. It's highly customizable, allowing you to personalize watermarks with various fonts, styles, and designs to suit your needs.
+
+  Accessible on web, mobile, and desktop, you can seamlessly integrate and manage your watermarking tasks across all your devices. **PicGuard**, as an open-source tool, it's not only free but also continuously improved by a community of developers dedicated to providing the best user experience.
+
+  Download **PicGuard** today and take control of your photo security and personalization like never before!
 vendor: kjxbyz
 packager: kjxbyz
 packagerEmail: hello@kjxbyz.com
