ci: migrate to linux arm64 hosted runners

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1591,7 +1591,7 @@ jobs:
 
   linux_deb_aarch64:
     name: Create linux deb (aarch64)
-    runs-on: buildjet-4vcpu-ubuntu-2204-arm
+    runs-on: ubuntu-22.04-arm
     needs:
       - create_release
     steps:
@@ -1720,7 +1720,7 @@ jobs:
 
   linux_rpm_aarch64:
     name: Create linux rpm (aarch64)
-    runs-on: buildjet-4vcpu-ubuntu-2204-arm
+    runs-on: ubuntu-22.04-arm
     needs:
       - create_release
     steps:
@@ -1862,7 +1862,7 @@ jobs:
 
   linux_tar_aarch64:
     name: Create linux tar (aarch64)
-    runs-on: buildjet-4vcpu-ubuntu-2204-arm
+    runs-on: ubuntu-22.04-arm
     needs:
       - create_release
     steps:
