Revert "fix: remove snapcraft support"
This reverts commit e44ff1c3a9d413845696df21b29e9fdf166e9c28.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -111,6 +111,8 @@ jobs:
       - linux_rpm_aarch64
       - linux_tar
       - linux_tar_aarch64
+      - linux_snap
+      - linux_snap_aarch64
       - windows_msi
       - windows_msix_free
       - windows_msix_pro
@@ -1930,6 +1932,136 @@ jobs:
       - name: Clean up
         if: ${{ always() }}
         run: rm -f .env
+
+  linux_snap:
+    name: Create linux snap
+    runs-on: ubuntu-22.04
+    env:
+      LXD_GROUP: lxd
+    needs:
+      - create_release
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Setup LXD
+        uses: canonical/setup-lxd@v0.1.2
+        with:
+          channel: latest/stable
+          group: ${{ env.LXD_GROUP }}
+
+      - name: Configure .env
+        run: |
+          ENV_BASE64="$([[ "$ENV" == "staging" ]] && echo "$ENV_STG_BASE64" || echo "$ENV_PROD_BASE64")"
+          echo "$ENV_BASE64" | base64 --decode > .env
+        env:
+          ENV: ${{ github.event.inputs.env }}
+          ENV_STG_BASE64: ${{ secrets.ENV_STG_BASE64 }}
+          ENV_PROD_BASE64: ${{ secrets.ENV_PROD_BASE64 }}
+
+      - name: Install snapcraft
+        run: sudo snap install snapcraft --classic
+
+      - name: Update snapcraft.yaml
+        run: |
+          VERSION="$VERSION_SHORT.$BUILD_NUMBER" yq -i '.version = strenv(VERSION)' snap/snapcraft.yaml
+        env:
+          VERSION_SHORT: ${{ needs.create_release.outputs.version_short }}
+          BUILD_NUMBER: ${{ needs.create_release.outputs.build_number }}
+
+      - name: Build snap
+        run: |
+          # https://snapcraft.io/docs/flutter-applications
+          sudo snapcraft --output picguard_"$RELEASE"_linux_amd64.snap
+        env:
+          RELEASE: ${{ needs.create_release.outputs.release }}
+
+      # Package the build.
+      - name: Copy build for snap
+        run: ls -la *.snap
+
+      - name: Upload assets
+        run: gh release upload "$TAG_NAME" ./*.snap
+        env:
+          TAG_NAME: ${{ needs.create_release.outputs.tag_name }}
+          GH_TOKEN: ${{ secrets.PG_RELEASE_TOKEN }}
+
+      - name: Clean up
+        if: ${{ always() }}
+        run: |
+          rm -f .env
+          if which snapcraft >/dev/null 2>&1; then
+            echo "snapcraft exists"
+            sudo snapcraft clean
+          fi
+
+  linux_snap_aarch64:
+    name: Create linux snap (aarch64)
+    runs-on: buildjet-4vcpu-ubuntu-2204-arm
+    env:
+      LXD_GROUP: lxd
+    needs:
+      - create_release
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Setup LXD
+        uses: canonical/setup-lxd@v0.1.2
+        with:
+          channel: latest/stable
+          group: ${{ env.LXD_GROUP }}
+
+      - name: Configure .env
+        run: |
+          ENV_BASE64="$([[ "$ENV" == "staging" ]] && echo "$ENV_STG_BASE64" || echo "$ENV_PROD_BASE64")"
+          echo "$ENV_BASE64" | base64 --decode > .env
+        env:
+          ENV: ${{ github.event.inputs.env }}
+          ENV_STG_BASE64: ${{ secrets.ENV_STG_BASE64 }}
+          ENV_PROD_BASE64: ${{ secrets.ENV_PROD_BASE64 }}
+
+      - name: Install yq
+        run: |
+          if ! command -v yq >/dev/null 2>&1; then
+            echo "yq not exists"
+            sudo snap install -y yq
+          fi
+          yq --version
+
+      - name: Update snapcraft.yaml
+        run: |
+          VERSION="$VERSION_SHORT.$BUILD_NUMBER" yq -i '.version = strenv(VERSION)' snap/snapcraft.yaml
+        env:
+          VERSION_SHORT: ${{ needs.create_release.outputs.version_short }}
+          BUILD_NUMBER: ${{ needs.create_release.outputs.build_number }}
+
+      - name: Install snapcraft
+        run: sudo snap install snapcraft --classic
+
+      - name: Build snap
+        run: |
+          # https://snapcraft.io/docs/flutter-applications
+          sudo snapcraft --output "picguard_"$RELEASE"_linux_aarch64.snap"
+        env:
+          RELEASE: ${{ needs.create_release.outputs.release }}
+
+      # Package the build.
+      - name: Copy build for snap
+        run: ls -la *.snap
+
+      - name: Upload assets
+        run: gh release upload "$TAG_NAME" ./*.snap
+        env:
+          TAG_NAME: ${{ needs.create_release.outputs.tag_name }}
+          GH_TOKEN: ${{ secrets.PG_RELEASE_TOKEN }}
+
+      - name: Clean up
+        if: ${{ always() }}
+        run: |
+          rm -f .env
+          if which snapcraft >/dev/null 2>&1; then
+            echo "snapcraft exists"
+            sudo snapcraft clean
+          fi
 
   windows_msi:
     name: Create windows msi
