--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -105,6 +105,8 @@ jobs:
       - macos_appstore_pro
       - macos_zip
       - macos_tar
+      - linux_appimage
+      - linux_appimage_aarch64
       - linux_deb
       - linux_deb_aarch64
       - linux_rpm
@@ -1511,6 +1513,148 @@ jobs:
             security delete-keychain $RUNNER_TEMP/pg-signing.keychain-db
           fi
           rm -f .env
+          
+  linux_appimage:
+    name: Create linux AppImage
+    runs-on: ubuntu-22.04
+    needs:
+      - create_release
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Install dependencies for Linux
+        run: |
+          sudo apt-get update -y && sudo apt-get upgrade -y
+          sudo apt-get install -y curl libcurl4-openssl-dev git unzip xz-utils zip libglu1-mesa
+          sudo apt-get install -y clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev libstdc++-12-dev
+          sudo apt-get install -y locate libfuse2
+          
+      - name: Install appimagetool
+        run: |
+          wget -O appimagetool "https://github.com/AppImage/AppImageKit/releases/download/continuous/appimagetool-x86_64.AppImage"
+          chmod +x appimagetool && mv appimagetool /usr/local/bin/
+
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          channel: 'stable'
+          flutter-version: '3.27.2'
+
+      - name: Flutter doctor -v
+        run: flutter doctor -v
+
+      - name: Configure .env
+        run: |
+          ENV_BASE64="$([[ "$ENV" == "staging" ]] && echo "$ENV_STG_BASE64" || echo "$ENV_PROD_BASE64")"
+          echo "$ENV_BASE64" | base64 --decode > .env
+        env:
+          ENV: ${{ github.event.inputs.env }}
+          ENV_STG_BASE64: ${{ secrets.ENV_STG_BASE64 }}
+          ENV_PROD_BASE64: ${{ secrets.ENV_PROD_BASE64 }}
+
+      - name: Install flutter_distributor
+        run: dart pub global activate flutter_distributor
+
+      - name: Build AppImage
+        run: |
+          flutter_distributor package \
+            --flutter-build-args "dart-define-from-file=.env,target=lib/main_free.dart" \
+            --platform linux \
+            --targets appimage \
+            --artifact-name {{name}}_"$RELEASE"_{{platform}}_amd64.{{ext}}
+        env:
+          RELEASE: ${{ needs.create_release.outputs.release }}
+
+      # Package the build.
+      - name: Copy build for AppImage
+        run: |
+          ls -laR
+          cp ./**/*.AppImage $GITHUB_WORKSPACE/
+        working-directory: dist
+
+      - name: Upload assets
+        run: gh release upload "$TAG_NAME" ./*.AppImage
+        env:
+          TAG_NAME: ${{ needs.create_release.outputs.tag_name }}
+          GH_TOKEN: ${{ secrets.PG_RELEASE_TOKEN }}
+
+      - name: Clean up
+        if: ${{ always() }}
+        run: rm -f .env
+
+  linux_appimage_aarch64:
+    name: Create linux AppImage (aarch64)
+    runs-on: ubuntu-22.04-arm
+    needs:
+      - create_release
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Install dependencies for Linux
+        run: |
+          sudo apt-get update -y && sudo apt-get upgrade -y
+          sudo apt-get install -y curl libcurl4-openssl-dev git unzip xz-utils zip libglu1-mesa
+          sudo apt-get install -y clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev libstdc++-12-dev
+          sudo apt-get install -y locate libfuse2
+
+      - name: Install appimagetool
+        run: |
+          wget -O appimagetool "https://github.com/AppImage/AppImageKit/releases/download/continuous/appimagetool-aarch64.AppImage"
+          # https://github.com/AppImage/AppImageKit/issues/1056#issuecomment-643382397
+          # sed -i 's|AI\x02|\x00\x00\x00|' appimagetool
+          chmod +x appimagetool && mv appimagetool /usr/local/bin/
+
+      - name: Setup Flutter
+        shell: bash
+        run: |
+          chmod +x ./scripts/install-flutter-ubuntu-actions.sh
+          ./scripts/install-flutter-ubuntu-actions.sh
+
+      - name: Flutter doctor -v
+        run: flutter doctor -v
+
+      - name: Configure .env
+        run: |
+          ENV_BASE64="$([[ "$ENV" == "staging" ]] && echo "$ENV_STG_BASE64" || echo "$ENV_PROD_BASE64")"
+          echo "$ENV_BASE64" | base64 --decode > .env
+        env:
+          ENV: ${{ github.event.inputs.env }}
+          ENV_STG_BASE64: ${{ secrets.ENV_STG_BASE64 }}
+          ENV_PROD_BASE64: ${{ secrets.ENV_PROD_BASE64 }}
+
+      - name: Install flutter_distributor
+        run: |
+          dart pub global activate \
+            --source git https://github.com/kjxbyz/flutter_distributor \
+            --git-ref pacman \
+            --git-path packages/flutter_distributor
+
+      - name: Build AppImage
+        run: |
+          flutter_distributor package \
+            --flutter-build-args "dart-define-from-file=.env,target=lib/main_free.dart" \
+            --platform linux \
+            --targets appimage \
+            --artifact-name {{name}}_"$RELEASE"_{{platform}}_aarch64.{{ext}}
+        env:
+          RELEASE: ${{ needs.create_release.outputs.release }}
+
+      # Package the build.
+      - name: Copy build for AppImage
+        run: |
+          ls -laR
+          cp ./**/*.AppImage $GITHUB_WORKSPACE/
+        working-directory: dist
+
+      - name: Upload assets
+        run: gh release upload "$TAG_NAME" ./*.AppImage
+        env:
+          TAG_NAME: ${{ needs.create_release.outputs.tag_name }}
+          GH_TOKEN: ${{ secrets.PG_RELEASE_TOKEN }}
+
+      - name: Clean up
+        if: ${{ always() }}
+        run: rm -f .env
 
   linux_deb:
     name: Create linux deb
