--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,6 @@
 name: picguard
 description: "Your pictures, your signature."
-# The following line prevents the package from being accidentally published to
-# pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: 'none'
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -22,24 +20,17 @@ environment:
   sdk: '>=3.6.0 <4.0.0'
   flutter: '>=3.27.3'
 
-# Dependencies specify other packages that your package needs in order to work.
-# To automatically upgrade your package dependencies to the latest versions
-# consider running `flutter pub upgrade --major-versions`. Alternatively,
-# dependencies can be manually updated by changing the version numbers below to
-# the latest version available on pub.dev. To see which dependencies have newer
-# versions available, run `flutter pub outdated`.
 dependencies:
   app_settings: # e1d39e4ea052e9dd9a47fbab49737846d9b43264
     path: ./plugins/app_settings
   cupertino_icons: ^1.0.8
-  device_info_plus: ^11.2.1
-  file_picker: ^8.1.7
+  device_info_plus: ^11.2.2
+  file_picker: ^8.3.1
   file_saver: ^0.2.14
   flutter:
     sdk: flutter
   flutter_easyloading: ^3.0.5
   flutter_form_builder: ^9.7.0
-  flutter_gen: ^5.8.0
   flutter_localizations:
     sdk: flutter
   flutter_native_splash: ^2.4.4
@@ -54,21 +45,20 @@ dependencies:
   image_picker: ^1.1.2
   keyboard_dismisser: ^3.0.0
   logging: ^1.3.0
-  package_info_plus: ^8.1.3
+  package_info_plus: ^8.2.0
   permission_handler: ^11.3.1
   photo_view: ^0.15.0
   reorderables: ^0.6.0
   sentry_flutter: ^8.12.0
   sentry_logging: ^8.12.0
-  shared_preferences: ^2.4.0
+  shared_preferences: ^2.5.1
   slang_flutter: ^4.4.0
-  syncfusion_flutter_sliders: ^28.1.41
+  syncfusion_flutter_sliders: ^28.2.4
   synchronized: ^3.3.0+3
   url_launcher: ^6.3.1
 
 dev_dependencies:
   build_runner: ^2.4.14
-  flutter_gen_runner: ^5.8.0
   flutter_test:
     sdk: flutter
   husky: ^0.1.7
@@ -90,8 +80,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  assets:
-     - logo/
+#  assets:
+#     - logo/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -189,17 +179,6 @@ msix_config:
   identity_name: IDENTITY_NAME_PLACEHOLDER
   publisher: PUBLISHER_PLACEHOLDER
   publisher_display_name: PUBLISHER_NAME_PLACEHOLDER
-
-flutter_gen:
-  output: lib/gen/ # Optional (default: lib/gen/)
-  line_length: 80 # Optional (default: 80)
-
-  # Optional
-#  integrations:
-#    flutter_svg: true
-#    flare_flutter: true
-#    rive: true
-#    lottie: true
 
 import_sorter:
   ignored_files: # Optional, defaults to []
