ci: update dependabot.yml

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -16,6 +16,11 @@ updates:
     schedule:
       interval: "daily"
     open-pull-requests-limit: 10
+    groups:
+      sentry-dependencies:
+        patterns: [ "sentry_flutter", "sentry_logging" ]
+      slang-dependencies:
+        patterns: [ "slang_flutter", "slang_build_runner" ]
 
 #  - package-ecosystem: "cargo" # See documentation for possible values
 #    directory: "/rust" # Location of package manifests
