--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,8 +17,8 @@ publish_to: 'none'
 version: 1.0.13+437
 
 environment:
-  sdk: '>=3.6.0 <4.0.0'
-  flutter: '>=3.27.4'
+  sdk: '>=3.7.0 <4.0.0'
+  flutter: '>=3.29.0'
 
 dependencies:
   app_settings: # e1d39e4ea052e9dd9a47fbab49737846d9b43264
@@ -54,7 +54,7 @@ dependencies:
   shared_preferences: ^2.5.2
   slang_flutter: ^4.4.0
   syncfusion_flutter_sliders: ^28.2.5
-  synchronized: ^3.3.0+3
+  synchronized: ^3.3.1
   url_launcher: ^6.3.1
 
 dev_dependencies:
