fix(android): build error

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -19,6 +19,7 @@ if (proKeystorePropertiesFile.exists()) {
 android {
     namespace "com.kjxbyz.picguard"
     compileSdk = flutter.compileSdkVersion
+    ndkVersion "27.2.12479018"
 //    ndkVersion = flutter.ndkVersion
 
     compileOptions {
