fix: correct git errors in flutter

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -68,6 +68,9 @@ parts:
         rm -rf $PG_FLUTTER_BUILD_DIR
       fi
       git clone --depth 1 -b $FLUTTER_VERSION $FLUTTER_REPO $PG_FLUTTER_BUILD_DIR
+      
+      # https://github.com/canonical/snapcraft/pull/5264
+      rm -f "$PG_FLUTTER_BUILD_DIR/engine/src/.gn"
       flutter doctor -v
       flutter precache --linux
       flutter pub get
